[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/EnemyCar.gd" type="Script" id=1]
[ext_resource path="res://Assets/enemies/green_car.png" type="Texture" id=2]
[ext_resource path="res://Assets/enemies/blue_car.png" type="Texture" id=3]
[ext_resource path="res://Assets/enemies/red_car.png" type="Texture" id=4]
[ext_resource path="res://Assets/music/car_crash.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/music/passing_car.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "blue",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "green",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 351.631, 758.828 )

[node name="EnemyCar" type="Area2D"]
position = Vector2( 8, 16 )
scale = Vector2( 0.0327047, 0.0250386 )
collision_layer = 4
script = ExtResource( 1 )

[node name="CarSprite" type="AnimatedSprite" parent="."]
position = Vector2( 16, 63.9382 )
scale = Vector2( 20, 25 )
frames = SubResource( 3 )
animation = "green"
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 30.5767, 39.9384 )
shape = SubResource( 2 )

[node name="CarCrash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="PassingCar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -30.0
autoplay = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_EnemyCar_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
